# argo

./: .gdbinit  .gitignore  .lldbinit  ANDROID.md  CMakeLists.txt  IOS.md  LINUX.md  MACOS.md  Makefile  README.md  WINDOWS.md  aes.h  api.cpp  api.h  argo.cfg  argo.cpp  ascii.h  channel.cpp  channel.h  cipher.h  des.h  descriptor.json  digest.h  driver.cpp  driver.h  hmac.h  idriver.h  json.cpp  json.h  md5.cpp  md5.h  netstat  path.cpp  path.h  pbc2.h  prng.h  random.h  sha.cpp  sha.h  socket.cpp  (+4 more)
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/davidjwalling/argo/: MainActivity.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
ios/argo/argo/: ContentView.swift  argo-Bridging-Header.h  argoApp.swift  wrap_driver.h  wrap_driver.mm
ios/argo/argo.xcodeproj/: project.pbxproj
ios/argo/argo.xcodeproj/project.xcworkspace/xcuserdata/me.xcuserdatad/: UserInterfaceState.xcuserstate
ios/argo/argo.xcodeproj/xcshareddata/xcschemes/: argo.xcscheme
ios/argo/argo.xcodeproj/xcuserdata/me.xcuserdatad/xcschemes/: xcschememanagement.plist
windows/: argo.props  argo.sln  argo.vcxproj  libargo.vcxproj  make.bat  testargo.vcxproj
